tdf#149079 don't skip disposing DnDListener

even if there is no longer a DropTarget don't return early and
omit to inform listeners of the disposing

Change-Id: I6ce7fe1664049a9e0a88b549b1c8c94ec8072c1f